// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add existing report 1`] = `
{
  "descriptor": {
    "adapter": {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension to store custom reports in stats",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-custom-reports",
    "version": "8.8.8",
  },
  "payload": {
    "compilations": [
      {
        "id": null,
        "reports": [
          {
            "context": "context",
            "data": "data",
            "id": "foo",
            "name": "name",
            "view": [
              "some-ui",
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`should work 1`] = `
{
  "descriptor": {
    "adapter": {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension to store custom reports in stats",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-custom-reports",
    "version": "8.8.8",
  },
  "payload": {
    "compilations": [
      {
        "id": null,
        "reports": [
          {
            "context": "context",
            "data": "data",
            "id": "foo",
            "name": "name",
            "view": [
              "some-ui",
            ],
          },
        ],
      },
      {
        "id": "foo-compilation",
        "reports": [
          {
            "compilation": "foo-compilation",
            "context": "context2",
            "data": "data2",
            "id": "foo2",
            "name": "name2",
            "relations": [
              {
                "id": "foo",
                "type": "module",
              },
            ],
            "view": [
              "some-ui2",
            ],
          },
        ],
      },
    ],
  },
}
`;
